; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/extr_menu_setting.c_setting_get_string_representation_uint_rgui_menu_color_theme.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/extr_menu_setting.c_setting_get_string_representation_uint_rgui_menu_color_theme.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32* }

@MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_CUSTOM = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_CLASSIC_RED = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_CLASSIC_ORANGE = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_CLASSIC_YELLOW = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_CLASSIC_GREEN = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_CLASSIC_BLUE = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_CLASSIC_VIOLET = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_CLASSIC_GREY = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_LEGACY_RED = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_DARK_PURPLE = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_MIDNIGHT_BLUE = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_GOLDEN = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_ELECTRIC_BLUE = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_APPLE_GREEN = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_VOLCANIC_RED = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_LAGOON = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_BROGRAMMER = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_DRACULA = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_FAIRYFLOSS = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_FLATUI = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_GRUVBOX_DARK = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_GRUVBOX_LIGHT = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_HACKING_THE_KERNEL = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_NORD = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_NOVA = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_ONE_DARK = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_PALENIGHT = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_SOLARIZED_DARK = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_SOLARIZED_LIGHT = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_TANGO_DARK = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_TANGO_LIGHT = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_ZENBURN = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_ANTI_ZENBURN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_7__*, i8*, i64)* @setting_get_string_representation_uint_rgui_menu_color_theme to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setting_get_string_representation_uint_rgui_menu_color_theme(%struct.TYPE_7__* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.TYPE_7__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %8 = icmp ne %struct.TYPE_7__* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %3
  br label %215

10:                                               ; preds = %3
  %11 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %12 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  %16 = load i32, i32* %15, align 4
  switch i32 %16, label %215 [
    i32 150, label %17
    i32 153, label %23
    i32 154, label %29
    i32 151, label %35
    i32 156, label %41
    i32 157, label %47
    i32 152, label %53
    i32 155, label %59
    i32 139, label %65
    i32 149, label %71
    i32 138, label %77
    i32 144, label %83
    i32 147, label %89
    i32 159, label %95
    i32 129, label %101
    i32 140, label %107
    i32 158, label %113
    i32 148, label %119
    i32 146, label %125
    i32 145, label %131
    i32 143, label %137
    i32 142, label %143
    i32 141, label %149
    i32 137, label %155
    i32 136, label %161
    i32 135, label %167
    i32 134, label %173
    i32 133, label %179
    i32 132, label %185
    i32 131, label %191
    i32 130, label %197
    i32 128, label %203
    i32 160, label %209
  ]

17:                                               ; preds = %10
  %18 = load i8*, i8** %5, align 8
  %19 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_CUSTOM, align 4
  %20 = call i32 @msg_hash_to_str(i32 %19)
  %21 = load i64, i64* %6, align 8
  %22 = call i32 @strlcpy(i8* %18, i32 %20, i64 %21)
  br label %215

23:                                               ; preds = %10
  %24 = load i8*, i8** %5, align 8
  %25 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_CLASSIC_RED, align 4
  %26 = call i32 @msg_hash_to_str(i32 %25)
  %27 = load i64, i64* %6, align 8
  %28 = call i32 @strlcpy(i8* %24, i32 %26, i64 %27)
  br label %215

29:                                               ; preds = %10
  %30 = load i8*, i8** %5, align 8
  %31 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_CLASSIC_ORANGE, align 4
  %32 = call i32 @msg_hash_to_str(i32 %31)
  %33 = load i64, i64* %6, align 8
  %34 = call i32 @strlcpy(i8* %30, i32 %32, i64 %33)
  br label %215

35:                                               ; preds = %10
  %36 = load i8*, i8** %5, align 8
  %37 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_CLASSIC_YELLOW, align 4
  %38 = call i32 @msg_hash_to_str(i32 %37)
  %39 = load i64, i64* %6, align 8
  %40 = call i32 @strlcpy(i8* %36, i32 %38, i64 %39)
  br label %215

41:                                               ; preds = %10
  %42 = load i8*, i8** %5, align 8
  %43 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_CLASSIC_GREEN, align 4
  %44 = call i32 @msg_hash_to_str(i32 %43)
  %45 = load i64, i64* %6, align 8
  %46 = call i32 @strlcpy(i8* %42, i32 %44, i64 %45)
  br label %215

47:                                               ; preds = %10
  %48 = load i8*, i8** %5, align 8
  %49 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_CLASSIC_BLUE, align 4
  %50 = call i32 @msg_hash_to_str(i32 %49)
  %51 = load i64, i64* %6, align 8
  %52 = call i32 @strlcpy(i8* %48, i32 %50, i64 %51)
  br label %215

53:                                               ; preds = %10
  %54 = load i8*, i8** %5, align 8
  %55 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_CLASSIC_VIOLET, align 4
  %56 = call i32 @msg_hash_to_str(i32 %55)
  %57 = load i64, i64* %6, align 8
  %58 = call i32 @strlcpy(i8* %54, i32 %56, i64 %57)
  br label %215

59:                                               ; preds = %10
  %60 = load i8*, i8** %5, align 8
  %61 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_CLASSIC_GREY, align 4
  %62 = call i32 @msg_hash_to_str(i32 %61)
  %63 = load i64, i64* %6, align 8
  %64 = call i32 @strlcpy(i8* %60, i32 %62, i64 %63)
  br label %215

65:                                               ; preds = %10
  %66 = load i8*, i8** %5, align 8
  %67 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_LEGACY_RED, align 4
  %68 = call i32 @msg_hash_to_str(i32 %67)
  %69 = load i64, i64* %6, align 8
  %70 = call i32 @strlcpy(i8* %66, i32 %68, i64 %69)
  br label %215

71:                                               ; preds = %10
  %72 = load i8*, i8** %5, align 8
  %73 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_DARK_PURPLE, align 4
  %74 = call i32 @msg_hash_to_str(i32 %73)
  %75 = load i64, i64* %6, align 8
  %76 = call i32 @strlcpy(i8* %72, i32 %74, i64 %75)
  br label %215

77:                                               ; preds = %10
  %78 = load i8*, i8** %5, align 8
  %79 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_MIDNIGHT_BLUE, align 4
  %80 = call i32 @msg_hash_to_str(i32 %79)
  %81 = load i64, i64* %6, align 8
  %82 = call i32 @strlcpy(i8* %78, i32 %80, i64 %81)
  br label %215

83:                                               ; preds = %10
  %84 = load i8*, i8** %5, align 8
  %85 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_GOLDEN, align 4
  %86 = call i32 @msg_hash_to_str(i32 %85)
  %87 = load i64, i64* %6, align 8
  %88 = call i32 @strlcpy(i8* %84, i32 %86, i64 %87)
  br label %215

89:                                               ; preds = %10
  %90 = load i8*, i8** %5, align 8
  %91 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_ELECTRIC_BLUE, align 4
  %92 = call i32 @msg_hash_to_str(i32 %91)
  %93 = load i64, i64* %6, align 8
  %94 = call i32 @strlcpy(i8* %90, i32 %92, i64 %93)
  br label %215

95:                                               ; preds = %10
  %96 = load i8*, i8** %5, align 8
  %97 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_APPLE_GREEN, align 4
  %98 = call i32 @msg_hash_to_str(i32 %97)
  %99 = load i64, i64* %6, align 8
  %100 = call i32 @strlcpy(i8* %96, i32 %98, i64 %99)
  br label %215

101:                                              ; preds = %10
  %102 = load i8*, i8** %5, align 8
  %103 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_VOLCANIC_RED, align 4
  %104 = call i32 @msg_hash_to_str(i32 %103)
  %105 = load i64, i64* %6, align 8
  %106 = call i32 @strlcpy(i8* %102, i32 %104, i64 %105)
  br label %215

107:                                              ; preds = %10
  %108 = load i8*, i8** %5, align 8
  %109 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_LAGOON, align 4
  %110 = call i32 @msg_hash_to_str(i32 %109)
  %111 = load i64, i64* %6, align 8
  %112 = call i32 @strlcpy(i8* %108, i32 %110, i64 %111)
  br label %215

113:                                              ; preds = %10
  %114 = load i8*, i8** %5, align 8
  %115 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_BROGRAMMER, align 4
  %116 = call i32 @msg_hash_to_str(i32 %115)
  %117 = load i64, i64* %6, align 8
  %118 = call i32 @strlcpy(i8* %114, i32 %116, i64 %117)
  br label %215

119:                                              ; preds = %10
  %120 = load i8*, i8** %5, align 8
  %121 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_DRACULA, align 4
  %122 = call i32 @msg_hash_to_str(i32 %121)
  %123 = load i64, i64* %6, align 8
  %124 = call i32 @strlcpy(i8* %120, i32 %122, i64 %123)
  br label %215

125:                                              ; preds = %10
  %126 = load i8*, i8** %5, align 8
  %127 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_FAIRYFLOSS, align 4
  %128 = call i32 @msg_hash_to_str(i32 %127)
  %129 = load i64, i64* %6, align 8
  %130 = call i32 @strlcpy(i8* %126, i32 %128, i64 %129)
  br label %215

131:                                              ; preds = %10
  %132 = load i8*, i8** %5, align 8
  %133 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_FLATUI, align 4
  %134 = call i32 @msg_hash_to_str(i32 %133)
  %135 = load i64, i64* %6, align 8
  %136 = call i32 @strlcpy(i8* %132, i32 %134, i64 %135)
  br label %215

137:                                              ; preds = %10
  %138 = load i8*, i8** %5, align 8
  %139 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_GRUVBOX_DARK, align 4
  %140 = call i32 @msg_hash_to_str(i32 %139)
  %141 = load i64, i64* %6, align 8
  %142 = call i32 @strlcpy(i8* %138, i32 %140, i64 %141)
  br label %215

143:                                              ; preds = %10
  %144 = load i8*, i8** %5, align 8
  %145 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_GRUVBOX_LIGHT, align 4
  %146 = call i32 @msg_hash_to_str(i32 %145)
  %147 = load i64, i64* %6, align 8
  %148 = call i32 @strlcpy(i8* %144, i32 %146, i64 %147)
  br label %215

149:                                              ; preds = %10
  %150 = load i8*, i8** %5, align 8
  %151 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_HACKING_THE_KERNEL, align 4
  %152 = call i32 @msg_hash_to_str(i32 %151)
  %153 = load i64, i64* %6, align 8
  %154 = call i32 @strlcpy(i8* %150, i32 %152, i64 %153)
  br label %215

155:                                              ; preds = %10
  %156 = load i8*, i8** %5, align 8
  %157 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_NORD, align 4
  %158 = call i32 @msg_hash_to_str(i32 %157)
  %159 = load i64, i64* %6, align 8
  %160 = call i32 @strlcpy(i8* %156, i32 %158, i64 %159)
  br label %215

161:                                              ; preds = %10
  %162 = load i8*, i8** %5, align 8
  %163 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_NOVA, align 4
  %164 = call i32 @msg_hash_to_str(i32 %163)
  %165 = load i64, i64* %6, align 8
  %166 = call i32 @strlcpy(i8* %162, i32 %164, i64 %165)
  br label %215

167:                                              ; preds = %10
  %168 = load i8*, i8** %5, align 8
  %169 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_ONE_DARK, align 4
  %170 = call i32 @msg_hash_to_str(i32 %169)
  %171 = load i64, i64* %6, align 8
  %172 = call i32 @strlcpy(i8* %168, i32 %170, i64 %171)
  br label %215

173:                                              ; preds = %10
  %174 = load i8*, i8** %5, align 8
  %175 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_PALENIGHT, align 4
  %176 = call i32 @msg_hash_to_str(i32 %175)
  %177 = load i64, i64* %6, align 8
  %178 = call i32 @strlcpy(i8* %174, i32 %176, i64 %177)
  br label %215

179:                                              ; preds = %10
  %180 = load i8*, i8** %5, align 8
  %181 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_SOLARIZED_DARK, align 4
  %182 = call i32 @msg_hash_to_str(i32 %181)
  %183 = load i64, i64* %6, align 8
  %184 = call i32 @strlcpy(i8* %180, i32 %182, i64 %183)
  br label %215

185:                                              ; preds = %10
  %186 = load i8*, i8** %5, align 8
  %187 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_SOLARIZED_LIGHT, align 4
  %188 = call i32 @msg_hash_to_str(i32 %187)
  %189 = load i64, i64* %6, align 8
  %190 = call i32 @strlcpy(i8* %186, i32 %188, i64 %189)
  br label %215

191:                                              ; preds = %10
  %192 = load i8*, i8** %5, align 8
  %193 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_TANGO_DARK, align 4
  %194 = call i32 @msg_hash_to_str(i32 %193)
  %195 = load i64, i64* %6, align 8
  %196 = call i32 @strlcpy(i8* %192, i32 %194, i64 %195)
  br label %215

197:                                              ; preds = %10
  %198 = load i8*, i8** %5, align 8
  %199 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_TANGO_LIGHT, align 4
  %200 = call i32 @msg_hash_to_str(i32 %199)
  %201 = load i64, i64* %6, align 8
  %202 = call i32 @strlcpy(i8* %198, i32 %200, i64 %201)
  br label %215

203:                                              ; preds = %10
  %204 = load i8*, i8** %5, align 8
  %205 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_ZENBURN, align 4
  %206 = call i32 @msg_hash_to_str(i32 %205)
  %207 = load i64, i64* %6, align 8
  %208 = call i32 @strlcpy(i8* %204, i32 %206, i64 %207)
  br label %215

209:                                              ; preds = %10
  %210 = load i8*, i8** %5, align 8
  %211 = load i32, i32* @MENU_ENUM_LABEL_VALUE_RGUI_MENU_COLOR_THEME_ANTI_ZENBURN, align 4
  %212 = call i32 @msg_hash_to_str(i32 %211)
  %213 = load i64, i64* %6, align 8
  %214 = call i32 @strlcpy(i8* %210, i32 %212, i64 %213)
  br label %215

215:                                              ; preds = %9, %10, %209, %203, %197, %191, %185, %179, %173, %167, %161, %155, %149, %143, %137, %131, %125, %119, %113, %107, %101, %95, %89, %83, %77, %71, %65, %59, %53, %47, %41, %35, %29, %23, %17
  ret void
}

declare dso_local i32 @strlcpy(i8*, i32, i64) #1

declare dso_local i32 @msg_hash_to_str(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
